--- a/backend/package.json
+++ b/backend/package.json
@@ -19,7 +19,8 @@
     "express": "^4.18.1",
     "express-async-handler": "^1.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^7.4.1"
+    "mongoose": "^7.4.1",
+    "socket.io": "^4.7.1"
   },
   "devDependencies": {
     "concurrently": "^7.3.0",
